arc/go/parser/arc_parser.go
// Copyright 2026 Synnax Labs, Inc.
//
// Use of this software is governed by the Business Source License included in the file
// licenses/BSL.txt.
//
// As of the Change Date specified in that file, in accordance with the Business Source
// License, use of this software will be governed by the Apache License, Version 2.0,
// included in the file licenses/APL.txt.

// Code generated from ArcParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // ArcParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ArcParser struct {
	*antlr.BaseParser
}

var ArcParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func arcparserParserInit() {
	staticData := &ArcParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'func'", "'if'", "'else'", "'return'", "'for'", "'break'", "'continue'",
		"'sequence'", "'stage'", "'next'", "'chan'", "'authority'", "'i8'",
		"'i16'", "'i32'", "'i64'", "'u8'", "'u16'", "'u32'", "'u64'", "'f32'",
		"'f64'", "'str'", "'series'", "'->'", "':='", "'$='", "'=>'", "'='",
		"'+='", "'-='", "'*='", "'/='", "'%='", "'+'", "'-'", "'*'", "'/'",
		"'%'", "'^'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'and'",
		"'or'", "'not'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'",
		"'.'",
	}
	staticData.SymbolicNames = []string{
		"", "FUNC", "IF", "ELSE", "RETURN", "FOR", "BREAK", "CONTINUE", "SEQUENCE",
		"STAGE", "NEXT", "CHAN", "AUTHORITY", "I8", "I16", "I32", "I64", "U8",
		"U16", "U32", "U64", "F32", "F64", "STR", "SERIES", "ARROW", "DECLARE",
		"STATE_DECLARE", "TRANSITION", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN",
		"STAR_ASSIGN", "SLASH_ASSIGN", "PERCENT_ASSIGN", "PLUS", "MINUS", "STAR",
		"SLASH", "PERCENT", "CARET", "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ",
		"AND", "OR", "NOT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET",
		"RBRACKET", "COMMA", "COLON", "DOT", "INTEGER_LITERAL", "FLOAT_LITERAL",
		"STR_LITERAL", "STR_LITERAL_RAW", "IDENTIFIER", "SINGLE_LINE_COMMENT",
		"MULTI_LINE_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"program", "topLevelItem", "authorityBlock", "authorityEntry", "functionDeclaration",
		"inputList", "input", "outputType", "multiOutputBlock", "namedOutput",
		"configBlock", "configList", "config", "sequenceDeclaration", "sequenceItem",
		"stageDeclaration", "stageBody", "stageItem", "singleInvocation", "globalConstant",
		"flowStatement", "flowOperator", "routingTable", "routingEntry", "flowNode",
		"identifier", "function", "qualifiedIdentifier", "configValues", "namedConfigValues",
		"namedConfigValue", "anonymousConfigValues", "arguments", "argumentList",
		"block", "statement", "variableDeclaration", "localVariable", "statefulVariable",
		"assignment", "compoundOp", "ifStatement", "elseIfClause", "elseClause",
		"forStatement", "forClause", "breakStatement", "continueStatement",
		"returnStatement", "type", "unitSuffix", "primitiveType", "numericType",
		"integerType", "floatType", "channelType", "seriesType", "expression",
		"logicalOrExpression", "logicalAndExpression", "equalityExpression",
		"relationalExpression", "additiveExpression", "multiplicativeExpression",
		"powerExpression", "unaryExpression", "postfixExpression", "indexOrSlice",
		"functionCallSuffix", "primaryExpression", "typeCast", "literal", "numericLiteral",
		"seriesLiteral", "expressionList",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ArcParserInit initializes any static state used to implement ArcParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewArcParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ArcParserInit() {
	staticData := &ArcParserParserStaticData
	staticData.once.Do(arcparserParserInit)
}

// NewArcParser produces a new parser instance for the optional input antlr.TokenStream.
func NewArcParser(input antlr.TokenStream) *ArcParser {
	ArcParserInit()
	this := new(ArcParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ArcParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ArcParser.g4"

	return this
}

// ArcParser tokens.
const (
	ArcParserEOF                 = antlr.TokenEOF
	ArcParserFUNC                = 1
	ArcParserIF                  = 2
	ArcParserELSE                = 3
	ArcParserRETURN              = 4
	ArcParserFOR                 = 5
	ArcParserBREAK               = 6
	ArcParserCONTINUE            = 7
	ArcParserSEQUENCE            = 8
	ArcParserSTAGE               = 9
	ArcParserNEXT                = 10
	ArcParserCHAN                = 11
	ArcParserAUTHORITY           = 12
	ArcParserI8                  = 13
	ArcParserI16                 = 14
	ArcParserI32                 = 15
	ArcParserI64                 = 16
	ArcParserU8                  = 17
	ArcParserU16                 = 18
	ArcParserU32                 = 19
	ArcParserU64                 = 20
	ArcParserF32                 = 21
	ArcParserF64                 = 22
	ArcParserSTR                 = 23
	ArcParserSERIES              = 24
	ArcParserARROW               = 25
	ArcParserDECLARE             = 26
	ArcParserSTATE_DECLARE       = 27
	ArcParserTRANSITION          = 28
	ArcParserASSIGN              = 29
	ArcParserPLUS_ASSIGN         = 30
	ArcParserMINUS_ASSIGN        = 31
	ArcParserSTAR_ASSIGN         = 32
	ArcParserSLASH_ASSIGN        = 33
	ArcParserPERCENT_ASSIGN      = 34
	ArcParserPLUS                = 35
	ArcParserMINUS               = 36
	ArcParserSTAR                = 37
	ArcParserSLASH               = 38
	ArcParserPERCENT             = 39
	ArcParserCARET               = 40
	ArcParserEQ                  = 41
	ArcParserNEQ                 = 42
	ArcParserLT                  = 43
	ArcParserGT                  = 44
	ArcParserLEQ                 = 45
	ArcParserGEQ                 = 46
	ArcParserAND                 = 47
	ArcParserOR                  = 48
	ArcParserNOT                 = 49
	ArcParserLPAREN              = 50
	ArcParserRPAREN              = 51
	ArcParserLBRACE              = 52
	ArcParserRBRACE              = 53
	ArcParserLBRACKET            = 54
	ArcParserRBRACKET            = 55
	ArcParserCOMMA               = 56
	ArcParserCOLON               = 57
	ArcParserDOT                 = 58
	ArcParserINTEGER_LITERAL     = 59
	ArcParserFLOAT_LITERAL       = 60
	ArcParserSTR_LITERAL         = 61
	ArcParserSTR_LITERAL_RAW     = 62
	ArcParserIDENTIFIER          = 63
	ArcParserSINGLE_LINE_COMMENT = 64
	ArcParserMULTI_LINE_COMMENT  = 65
	ArcParserWS                  = 66
)

// ArcParser rules.
const (
	ArcParserRULE_program                  = 0
	ArcParserRULE_topLevelItem             = 1
	ArcParserRULE_authorityBlock           = 2
	ArcParserRULE_authorityEntry           = 3
	ArcParserRULE_functionDeclaration      = 4
	ArcParserRULE_inputList                = 5
	ArcParserRULE_input                    = 6
	ArcParserRULE_outputType               = 7
	ArcParserRULE_multiOutputBlock         = 8
	ArcParserRULE_namedOutput              = 9
	ArcParserRULE_configBlock              = 10
	ArcParserRULE_configList               = 11
	ArcParserRULE_config                   = 12
	ArcParserRULE_sequenceDeclaration      = 13
	ArcParserRULE_sequenceItem             = 14
	ArcParserRULE_stageDeclaration         = 15
	ArcParserRULE_stageBody                = 16
	ArcParserRULE_stageItem                = 17
	ArcParserRULE_singleInvocation         = 18
	ArcParserRULE_globalConstant           = 19
	ArcParserRULE_flowStatement            = 20
	ArcParserRULE_flowOperator             = 21
	ArcParserRULE_routingTable             = 22
	ArcParserRULE_routingEntry             = 23
	ArcParserRULE_flowNode                 = 24
	ArcParserRULE_identifier               = 25
	ArcParserRULE_function                 = 26
	ArcParserRULE_qualifiedIdentifier      = 27
	ArcParserRULE_configValues             = 28
	ArcParserRULE_namedConfigValues        = 29
	ArcParserRULE_namedConfigValue         = 30
	ArcParserRULE_anonymousConfigValues    = 31
	ArcParserRULE_arguments                = 32
	ArcParserRULE_argumentList             = 33
	ArcParserRULE_block                    = 34
	ArcParserRULE_statement                = 35
	ArcParserRULE_variableDeclaration      = 36
	ArcParserRULE_localVariable            = 37
	ArcParserRULE_statefulVariable         = 38
	ArcParserRULE_assignment               = 39
	ArcParserRULE_compoundOp               = 40
	ArcParserRULE_ifStatement              = 41
	ArcParserRULE_elseIfClause             = 42
	ArcParserRULE_elseClause               = 43
	ArcParserRULE_forStatement             = 44
	ArcParserRULE_forClause                = 45
	ArcParserRULE_breakStatement           = 46
	ArcParserRULE_continueStatement        = 47
	ArcParserRULE_returnStatement          = 48
	ArcParserRULE_type                     = 49
	ArcParserRULE_unitSuffix               = 50
	ArcParserRULE_primitiveType            = 51
	ArcParserRULE_numericType              = 52
	ArcParserRULE_integerType              = 53
	ArcParserRULE_floatType                = 54
	ArcParserRULE_channelType              = 55
	ArcParserRULE_seriesType               = 56
	ArcParserRULE_expression               = 57
	ArcParserRULE_logicalOrExpression      = 58
	ArcParserRULE_logicalAndExpression     = 59
	ArcParserRULE_equalityExpression       = 60
	ArcParserRULE_relationalExpression     = 61
	ArcParserRULE_additiveExpression       = 62
	ArcParserRULE_multiplicativeExpression = 63
	ArcParserRULE_powerExpression          = 64
	ArcParserRULE_unaryExpression          = 65
	ArcParserRULE_postfixExpression        = 66
	ArcParserRULE_indexOrSlice             = 67
	ArcParserRULE_functionCallSuffix       = 68
	ArcParserRULE_primaryExpression        = 69
	ArcParserRULE_typeCast                 = 70
	ArcParserRULE_literal                  = 71
	ArcParserRULE_numericLiteral           = 72
	ArcParserRULE_seriesLiteral            = 73
	ArcParserRULE_expressionList           = 74
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllTopLevelItem() []ITopLevelItemContext
	TopLevelItem(i int) ITopLevelItemContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ArcParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ArcParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ArcParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(ArcParserEOF, 0)
}

func (s *ProgramContext) AllTopLevelItem() []ITopLevelItemContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITopLevelItemContext); ok {
			len++
		}
	}

	tst := make([]ITopLevelItemContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITopLevelItemContext); ok {
			tst[i] = t.(ITopLevelItemContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) TopLevelItem(i int) ITopLevelItemContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopLevelItemContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopLevelItemContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ArcParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ArcParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ArcParserVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ArcParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ArcParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(153)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&-552253835553276158) != 0 {
		{
			p.SetState(150)
			p.TopLevelItem()
		}

		p.SetState(155)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(156)
		p.Match(ArcParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITopLevelItemContext is an interface to support dynamic dispatch.
type ITopLevelItemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AuthorityBlock() IAuthorityBlockContext
	FunctionDeclaration() IFunctionDeclarationContext
	FlowStatement() IFlowStatementContext
	SequenceDeclaration() ISequenceDeclarationContext
	StageDeclaration() IStageDeclarationContext
	GlobalConstant() IGlobalConstantContext

	// IsTopLevelItemContext differentiates from other interfaces.
	IsTopLevelItemContext()
}

type TopLevelItemContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopLevelItemContext() *TopLevelItemContext {
	var p = new(TopLevelItemContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ArcParserRULE_topLevelItem
	return p
}

func InitEmptyTopLevelItemContext(p *TopLevelItemContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ArcParserRULE_topLevelItem
}

func (*TopLevelItemContext) IsTopLevelItemContext() {}

func NewTopLevelItemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopLevelItemContext {
	var p = new(TopLevelItemContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ArcParserRULE_topLevelItem

	return p
}

func (s *TopLevelItemContext) GetParser() antlr.Parser { return s.parser }

func (s *TopLevelItemContext) AuthorityBlock() IAuthorityBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAuthorityBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAuthorityBlockContext)
}

func (s *TopLevelItemContext) FunctionDeclaration() IFunctionDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDeclarationContext)
}

func (s *TopLevelItemContext) FlowStatement() IFlowStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFlowStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFlowStatementContext)
}

func (s *TopLevelItemContext) SequenceDeclaration() ISequenceDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISequenceDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISequenceDeclarationContext)
}

func (s *TopLevelItemContext) StageDeclaration() IStageDeclarationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStageDeclarationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStageDeclarationContext)
}

func (s *TopLevelItemContext) GlobalConstant() IGlobalConstantContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGlobalConstantContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGlobalConstantContext)
}

func (s *TopLevelItemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopLevelItemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TopLevelItemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ArcParserListener); ok {
		listenerT.EnterTopLevelItem(s)
	}
}

func (s *TopLevelItemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ArcParserListener); ok {
		listenerT.ExitTopLevelItem(s)
	}
}

func (s *TopLevelItemContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ArcParserVisitor:
		return t.VisitTopLevelItem(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ArcParser) TopLevelItem() (localctx ITopLevelItemContext) {
	localctx = NewTopLevelItemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ArcParserRULE_topLevelItem)
	p.SetState(164)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(158)
			p.AuthorityBlock()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(159)
			p.FunctionDeclaration()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(160)
			p.FlowStatement()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(161)
			p.SequenceDeclaration()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(162)
			p.StageDeclaration()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(163)
			p.GlobalConstant()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAuthorityBlockContext is an interface to support dynamic dispatch.
type IAuthorityBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AUTHORITY() antlr.TerminalNode
	INTEGER_LITERAL() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	RPAREN() antlr.TerminalNode
	AllAuthorityEntry() []IAuthorityEntryContext
	AuthorityEntry(i int) IAuthorityEntryContext

	// IsAuthorityBlockContext differentiates from other interfaces.
	IsAuthorityBlockContext()
}

type AuthorityBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAuthorityBlockContext() *AuthorityBlockContext {
	var p = new(AuthorityBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ArcParserRULE_authorityBlock
	return p
}

func InitEmptyAuthorityBlockContext(p *AuthorityBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ArcParserRULE_authorityBlock
}

func (*AuthorityBlockContext) IsAuthorityBlockContext() {}

func NewAuthorityBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AuthorityBlockContext {
	var p = new(AuthorityBlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ArcParserRULE_authorityBlock

	return p
}

func (s *AuthorityBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *AuthorityBlockContext) AUTHORITY() antlr.TerminalNode {
	return s.GetToken(ArcParserAUTHORITY, 0)
}

func (s *AuthorityBlockContext) INTEGER_LITERAL() antlr.TerminalNode {
	return s.GetToken(ArcParserINTEGER_LITERAL, 0)
}
